--- a/web.config
+++ b/web.config
@@ -8,6 +8,10 @@
 
    <rewrite>
   <rules>
+    <rule name="Rewrite to index.php">
+        <match url="assets" />
+        <action type="None" />
+    </rule>
     <rule name="Rule" stopProcessing="true">
       <match url="^(.*)$" ignoreCase="false" />
       <conditions>
