--- a/web.config
+++ b/web.config
@@ -8,9 +8,9 @@
 
    <rewrite>
   <rules>
-    <rule name="Rewrite to index.php">
-        <match url="assets" />
-        <action type="None" />
+    <rule name="block" stopProcessing="true">
+      <match url="^assets/" />
+      <action type="None" />
     </rule>
     <rule name="Rule" stopProcessing="true">
       <match url="^(.*)$" ignoreCase="false" />
